      info instead of a hash.
    + [RA] Adjust for the renaming of pkg in the file information hash.
  * lib/Lintian/Output/*.pm:
    + [RA] Adjust for print_tag() and file information hash changes.
  * lib/Lintian/Output/XML.pm:
    + [RA] Rewrite to be more readable and fix the tags attribute for
      overridden experimental tags.
  * lib/Lintian/Tag/Info.pm:
    + [RA] Add a code method that returns the tag code corresponding to
      the severity and certainty for a tag, based on get_tag_code from
      Tags.pm.
    + [RA] Add certainty, severity, and tag accessor methods.
    + [RA] Add a method saying whether a tag is experimental.
    + [RA] Record the check script corresponding to each tag and add an
      accessor method for it.
    + [RA] Add a sources method returning a list of sources referenced by
      a tag, based on the get_tag_source method from Tags.pm.
  * lib/Lintian/Tags.pm:
    + [RA] New module in a proper namespace replacing Tags.pm.  A global
      Lintian::Tags object replaces the static variables in the Tags
      namespace, with new accessor functions, except for the tag metadata
      functions (which have moved to Lintian::Tag::Info).  All handling of
      display levels is now here instead of in frontend/lintian.
    + [RA] Support suppressing a list of tags.
    + [RA] Suppress calling Lintian::Output::print_end_pkg for changes
      files, where we don't call print_start_pkg.  This fixes an unmatched
      closing tag in the experimental XML output.
  * lib/Spelling.pm:
    + [RA] Use Lintian::Tags instead of Tags.
  * lib/Tags.pm:
    + [RA] Removed in favor of Lintian::Tags.
  * lib/Util.pm:
    + [RA] Consume all output from extracting the control file of a binary
      package before closing the pipe.

  * man/lintian.1:
    + [RA] Document --suppress-tags and --suppress-tags-from-file.
    + [RA] Document format of --tags-from-file.
    + [RA] Document -F (--ftp-master-rejects).

  * private/refresh-ftp-master-tags: